untested google captcha

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,11 @@ POSTGRES_DB="hn"
 EMAIL_USERNAME=
 EMAIL_PASSWORD=
 EMAIL_HOST="smtp.gmail.com"
+
+# secure generation, consider using OpenSSL
+JWT_TOKEN=
+
+# Google ReCaptcha
+GOOGLE_SITE_KEY=
+GOOGLE_SECRET_KEY=
+GOOGLE_CUTOFF="0.5" # what, out of 1.0, should be considered a passing captcha score (0.5 or higher is best)
