--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^24.0.10",
     "@types/react": "^19.1.8",
