env file update

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ JWT_TOKEN=
 GOOGLE_SITE_KEY=
 GOOGLE_SECRET_KEY=
 GOOGLE_CUTOFF="0.5" # what, out of 1.0, should be considered a passing captcha score (0.5 or higher is best)
+
+# FRONTEND Variables (all MUST be prefixed with VITE_)
+VITE_API_ENDPOINT="http://localhost:3000"
