--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-# version: '3.8'
+#version: "3.8"
 
 services:
   postgres:
@@ -6,40 +6,32 @@ services:
     container_name: hackernews-postgres
     restart: unless-stopped
     ports:
-      - "5432:5432" # don't expose this in production
+      - "5432:5432"
     environment:
-      # these are for postgres
       POSTGRES_USER: ${POSTGRES_USERNAME}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
-      TZ: America/New_York
     volumes:
-      - pgdata:/var/lib/postgresql/data
       - ./db/schema.sql:/docker-entrypoint-initdb.d/schema.sql:ro
-  app:
-    build: .
+
+  react:
+    build:
+      context: .
+      dockerfile: Dockerfile.react
+    container_name: react-nginx
+    ports:
+      - "80:80"
+    restart: unless-stopped
+
+  go-server:
+    build:
+      context: .
+      dockerfile: Dockerfile.golang
+    container_name: go-server
+    restart: unless-stopped
     ports:
       - "30000:30000"
-    volumes:
-      - .:/root
-    environment:
-      # these are for go
-      WEBSITE_DOMAIN: ${WEBSITE_DOMAIN}
-      POSTGRES_HOST: postgres # postgres = docker IP address
-      POSTGRES_USERNAME: ${POSTGRES_USERNAME}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-      EMAIL_USERNAME: ${EMAIL_USERNAME}
-      EMAIL_PASSWORD: ${EMAIL_PASSWORD}
-      EMAIL_HOST: ${EMAIL_HOST}
-      JWT_TOKEN: ${JWT_TOKEN}
-      GOOGLE_SITE_KEY: ${GOOGLE_SITE_KEY}
-      GOOGLE_SECRET_KEY: ${GOOGLE_SECRET_KEY}
-      GOOGLE_CUTOFF: ${GOOGLE_CUTOFF}
-
+    env_file:
+      - ./.env
     depends_on:
-      - postgres # ie. won't let you start the app until postgres is ready
-
-
-volumes:
-  pgdata:
+      - postgres
