--- a/Dockerfile.react
+++ b/Dockerfile.react
@@ -14,6 +14,7 @@ RUN npm run build
 FROM nginx:stable-alpine
 
 COPY --from=builder /app/dist /usr/share/nginx/html
+COPY config/nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
