--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react-google-recaptcha-v3": "^1.11.0",
     "react-hook-form": "^7.60.0",
     "react-router-dom": "^7.6.3",
+    "recharts": "^2.15.4",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
