--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.1.0",
     "react-google-recaptcha-v3": "^1.11.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.60.0",
     "react-router-dom": "^7.6.3",
     "recharts": "^2.15.4",
@@ -47,6 +48,7 @@
     "@types/node": "^24.0.10",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/react-helmet": "^6.1.11",
     "@vitejs/plugin-react": "^4.5.2",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
