--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,4 @@
 # FRONTEND Variables (all MUST be prefixed with VITE_)
 VITE_API_ENDPOINT="http://localhost:3000"
 VITE_SERVICE_NAME="HackerNews"
+VITE_VERSION="v0.1.0 (alpha)"
