--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,3 +3,4 @@ VITE_API_ENDPOINT="http://localhost:3000"
 VITE_SERVICE_NAME="HackerNews"
 VITE_VERSION="v0.1.0 (alpha)"
 VITE_GOOGLE_RECAPTCHA_PUBLIC_KEY=""
+VITE_GOOGLE_ANALYTICS_ID="G-..."
