--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react": "^19.1.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.1.0",
+    "react-ga4": "^2.1.0",
     "react-google-recaptcha-v3": "^1.11.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.60.0",
