--- a/Dockerfile.react
+++ b/Dockerfile.react
@@ -1,20 +1,15 @@
 # Stage 1: Build React
 FROM node:18-alpine as builder
-
 WORKDIR /app
-
-COPY frontend/package*.json ./   
+COPY frontend/package*.json ./  
 RUN npm install
-
-COPY frontend/. ./ 
-
+COPY frontend/. ./
 RUN npm run build
 
-# Stage 2: Serve with nginx
-FROM nginx:stable-alpine
-
-COPY --from=builder /app/dist /usr/share/nginx/html
-COPY config/nginx.conf /etc/nginx/conf.d/default.conf
-
+# Stage 2: Serve with Caddy
+FROM caddy:2-alpine
+COPY --from=builder /app/dist /srv
+COPY config/Caddyfile /etc/caddy/Caddyfile
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+EXPOSE 443
+CMD ["caddy", "run", "--config", "/etc/caddy/Caddyfile", "--adapter", "caddyfile"]
