--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.react
-    container_name: react-nginx
+    container_name: react-caddy
     ports:
-      - "8080:8080"
+      - "80:80"
+      - "443:443"
     restart: unless-stopped
 
   go-server:
