fix: correct link + service title in magic link emails

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,3 @@
-WEBSITE_DOMAIN="www.example.com"
-
 POSTGRES_USERNAME=
 POSTGRES_PASSWORD=
 POSTGRES_DB="hn"
@@ -10,7 +8,7 @@ EMAIL_USERNAME=
 EMAIL_PASSWORD=
 EMAIL_HOST="smtp.gmail.com"
 
-# secure generation, consider using OpenSSL
+# for secure generation, consider using OpenSSL
 JWT_TOKEN=
 
 # Google ReCaptcha
