--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,10 @@
 # FRONTEND Variables (all MUST be prefixed with VITE_)
-VITE_API_ENDPOINT="http://localhost:3000"
+
+# API Endpoint = Where your go server is running; if you are directly running main.go, use http://127.0.0.1:30000
+# Frontend URL = Where the react site is running, if running vite dev server, use http://localhost:5173
+VITE_API_ENDPOINT="http://localhost:30000"
+VITE_FRONTEND_URL="http://localhost:5173"
+
 VITE_SERVICE_NAME="HackerNews"
 VITE_VERSION="v0.1.0 (alpha)"
 VITE_GOOGLE_RECAPTCHA_PUBLIC_KEY=""
