api key based routes

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,9 @@ EMAIL_PASSWORD=
 EMAIL_HOST="smtp.gmail.com"
 
 # for secure generation, consider using OpenSSL
+# pick a value in minutes for how long authentication tokens will expire after their creation
 JWT_TOKEN=
+TOKENS_EXPIRE_IN="60"
 
 # Google ReCaptcha
 GOOGLE_SITE_KEY=
