data dump frontend

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,9 @@ TOKENS_EXPIRE_IN="60"
 GOOGLE_SITE_KEY=
 GOOGLE_SECRET_KEY=
 GOOGLE_CUTOFF="0.5" # what, out of 1.0, should be considered a passing captcha score (0.5 or higher is best)
+
+# S3 (used for data dump uploads; we use backblaze but this should be amazon s3 compatable)
+S3_KEY_ID=
+S3_APPLICATION_KEY=
+S3_BUCKET_NAME="files"
+S3_BUCKET_REGION="us-east-005"
