--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,8 +35,10 @@
     "react-google-recaptcha-v3": "^1.11.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.60.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.3",
     "recharts": "^2.15.4",
+    "rehype-sanitize": "^6.0.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
